--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,30 +33,33 @@ services:
     environment:
       <<: *shared_environment
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - '8080:8080'
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
   migrate:
-    image: innerflowserver:latest
+    image: inner-flow-server-migrate:latest
     build:
       context: .
     environment:
       <<: *shared_environment
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     command: ["migrate", "--yes"]
     deploy:
       replicas: 0
   revert:
-    image: inner-flow-server:latest
+    image: inner-flow-server-revert:latest
     build:
       context: .
     environment:
       <<: *shared_environment
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     command: ["migrate", "--revert", "--yes"]
     deploy:
       replicas: 0
@@ -71,3 +74,24 @@ services:
       POSTGRES_DB: vapor_database
     ports:
       - '5432:5432'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U vapor_username"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+  goemotions:
+    build:
+      context: ./goemotions
+    volumes:
+      - ./models/ru-go-emotions:/app/ru-go-emotions
+    ports:
+      - "8000:8000"
+    restart: unless-stopped
+  mistral:
+    build:
+      context: ./mistral
+    volumes:
+      - ./models/mistral-7b-instruct-v0.2:/app/mistral-7b-instruct-v0.2
+    ports:
+      - "8001:8001"
+    restart: unless-stopped
